# LBPM-slim

./: .gitignore  CMakeLists.txt  README.md  installer.sh
IO/: netcdf.cpp
analysis/: analysis.cpp  filters.cpp  filters.h  imfilter.hpp  uCT.cpp
cmake/: LBPM-macros.cmake  libraries.cmake  macros.cmake
common/: ArraySize.h  Communication.h  Communication.hpp  Domain.cpp  Domain.h  ScaLBL.cpp  ScaLBL.h  Utilities.cpp
cpu/: BGK.cpp  Color.cpp  D3Q19.cpp  D3Q7.cpp  dfh.cpp  thermal.cpp
example/: CMakeLists.txt
example/Bubble/: input.db
gpu/: BGK.cu  Color.cu  D3Q19.cu  D3Q7.cu  Extras.cu  dfh.cu  thermal.cu
installer/: configureGadiCPU  configureGadiGPU  configureYDWCPU  configureYDWGPU
launcher/: LBPMSinglePhaseWindow.py  LBPMTwoPhaseWindow.py  LBPMWindow.py  lbpmslim-launcher.py  readme.txt  removeDisconnections.py  requirements.txt  runLBPMSinglePhase.py  runLBPMTwoPhase.py
models/: ColorModel.cpp  ColorModel.h  DFHModel.cpp  DFHModel.h  MRTModel.cpp  MRTModel.h
sample_scripts/: configureGadiCPU  configureGadiGPU  configureYDWCPU  configureYDWGPU  configureYDWTPL
tests/: CMakeLists.txt  TestColorBubble.cpp  TestColorSquareTube.cpp  TestCommD3Q19.cpp  TestFluxBC.cpp  TestForceMoments.cpp  TestMassConservationD3Q7.cpp  TestSegDist.cpp  checkGPUs.cpp  lbpm_NLMF_pp.cpp  lbpm_color_simulator.cpp  lbpm_dfh_simulator.cpp  lbpm_morphopen_pp.cpp  lbpm_permeability_simulator.cpp  lbpm_serial_decomp.cpp  lbpm_serial_uCT_decomp.cpp  lbpm_uCT_pp.cpp  testUtilities.cpp
